# librmem

./: .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  Makefile.am  README  bootstrap  configure.ac
include/: librmem.h
src/: .gitignore  Makefile.am  mem.c
tests/: .gitignore  Makefile.am  test.c
